feat(console): build management workspaces
